--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,14 @@
-APP_NAME=Laravel
+APP_NAME="ExpenseSettle"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
+APP_TIMEZONE=UTC
 APP_URL=http://localhost
+
+# PRODUCTION SETTINGS (uncomment for production):
+# APP_ENV=production
+# APP_DEBUG=false
+# APP_URL=https://yourdomain.com
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
