--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -16,10 +16,21 @@ android {
             ignoreAssetsPattern '!.svn:!.git:!.ds_store:!*.scc:.*:!CVS:!thumbs.db:!picasa.ini:!*~'
         }
     }
+
+    signingConfigs {
+        release {
+            storeFile file(System.getenv("KEYSTORE_PATH") ?: System.getProperty("user.home") + "/.keystore/expensesettle.keystore")
+            storePassword System.getenv("KEYSTORE_PASSWORD") ?: "expensesettle123"
+            keyAlias System.getenv("KEYSTORE_ALIAS") ?: "expensesettle"
+            keyPassword System.getenv("KEYSTORE_ALIAS_PASSWORD") ?: "expensesettle123"
+        }
+    }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
         }
     }
 }
