--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,8 @@
     "require": {
         "php": "^8.2",
         "barryvdh/laravel-dompdf": "^3.1",
+        "blade-ui-kit/blade-heroicons": "^2.6",
+        "blade-ui-kit/blade-icons": "^1.8",
         "google/cloud-vision": "^2.0",
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.2",
