--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@capacitor/geolocation": "^7.1.6",
         "@capacitor/ios": "^7.4.4",
         "@capacitor/local-notifications": "^7.0.3",
+        "@heroicons/vue": "^2.2.0",
         "chart.js": "^4.5.1"
     }
 }
